--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
             <h3>hellllllllo</h3>
+            <p>ikkinchi commit</p>
     <script src="./js/script.js"></script>
 </body>
 </html>
