--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
             <h3>hellllllllo</h3>
             <p>ikkinchi commit</p>
+            <h3>this code added in the office</h3>
     <script src="./js/script.js"></script>
 </body>
 </html>
